# AgentsBenchmark

./: .gitignore  README.md  SIDE-PROJECTS.md  STRUCTURE.md  benchmark-creation-playbook.md  pyproject.toml
golden/web_extraction/: rows.sample.jsonl
keeper/: README.md
keeper/data/: ca_freshwater.json  ca_marine.json
keeper/keeper/: __init__.py  __main__.py  decide.py  regdb.py
keeper/tests/: test_keeper.py
papertrail/: MARKET.md  README.md
papertrail/bench/: run_benchmark.py
papertrail/bench/golden/: deadlines.jsonl
papertrail/papertrail/: __init__.py  calendar_ca.py  citations.py  classify.py  cli.py  deadlines.py  deposit.py  evidence.py  letters.py
papertrail/tests/: test_papertrail.py
primitives/: web_extraction.yaml
primitives/_proposals/: kyb_registry.example.yaml
seatwatch/: README.md
seatwatch/seatwatch/: __init__.py  core.py
seatwatch/tests/: test_seatwatch.py
tests/: test_framework.py
wrodium/: __init__.py  cli.py  util.py
wrodium/adapters/: __init__.py  base.py  conformance.py  mock.py
wrodium/publish/: __init__.py  json_api.py  llms_txt.py  mcp_server.py  openapi.py
wrodium/schema/: __init__.py  golden.py  primitive.py  proposal.py
wrodium/scoring/: __init__.py  engine.py  metrics.py  states.py
wrodium/snapshot/: __init__.py  preflight.py  run.py
