[project]
name = "wrodium-bench"
version = "0.1.0"
description = "The system behind the wrodium benchmark-creation playbook: stage-gate toolchain for building agent-consumable vendor leaderboards."
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
wrodium = "wrodium.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wrodium*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
